site manager changes compatitable with program-enrollment service
- Removed ValueMapper class as it is no longer needed.
- Updated application-sample.yaml for improved configuration.
- Enhanced unit tests for Owner and Site mapping using ModelMapper.
- Refactored ProgramManagerFeignClientService to use lowercase for Feign client name.
- Modified AddressDto, BatteryDto, OwnerDto, and SolarDto to include validation annotations and removed unnecessary fields.
- Introduced OwnerIdentitiesDto for better identity management.
- Created SiteDto to encapsulate site-related data.
- Removed obsolete SiteResponseDto.
- Updated ProgramController to streamline program management endpoints.
- Simplified MeterManagementService by using modern Java stream methods.