@@ -15,7 +15,6 @@ import org.springframework.stereotype.Service;
 
 import java.time.LocalDateTime;
 import java.util.*;
-import java.util.stream.Collectors;
 
 @Slf4j
 @RequiredArgsConstructor
@@ -118,7 +117,7 @@ public class MeterManagementService {
 
         List<MeterSnapshot> snapshots = meterReadings.entrySet().stream()
                 .map(entry -> entry.getValue())
-                .collect(Collectors.toList());
+                .toList();
 
         log.info("getAllMeters: fetched {} meter snapshots from Bean Map",
                 snapshots != null ? snapshots.size() : 0);
